retrieve_ENO_DEV1/objects/Work_Period__c.object
<CustomObject>
    <fields>
        <fullName>Department_Empty__c</fullName>
        <formula>ISPICKVAL(Department__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Departments</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Work Period</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Costume_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Costume</value>
        </filters>
        <label>Costume Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Costume</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flys_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Flys</value>
        </filters>
        <label>Flys Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Flys</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lighting_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Lighting</value>
        </filters>
        <label>Lighting Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Lighting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orchestra_Porters_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Orchestra porters</value>
        </filters>
        <label>Orchestra Porters Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Orchestra_Porters</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Running_Props_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Running Props</value>
        </filters>
        <label>Running Props Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Running_Props</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sound_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Sound</value>
        </filters>
        <label>Sound Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Sound</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Stage_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Stage</value>
        </filters>
        <label>Stage Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Stage</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Wigs_Department</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Published__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Wigs</value>
        </filters>
        <label>Wigs Department</label>
        <sharedTo>
            <roleAndSubordinates>Head_of_Wigs</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Work Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Periods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>